# NumPP

./: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  justfile  vcpkg.json
.github/workflows/: ci.yml
cmake/: NumPPConfig.cmake.in
docs/: gpu-backends.md  numpy-parity-gaps.md  overview.md  parity-loop-progress.md  roadmap-progress.md
examples/: CMakeLists.txt  ee01_rlc_impedance.cpp  ee02_nodal_analysis.cpp  ee03_fourier_spectrum.cpp  ee04_convolution_filter.cpp  ee05_state_space_stability.cpp  ee06_least_squares_fit.cpp  ee07_three_phase_power.cpp  ee08_laplace_transfer.cpp  ee09_control_bode.cpp  ee10_windowing.cpp  nn01_mlp_xor.cpp  parity.hpp  quickstart.cpp
include/numpp/: export.hpp  fwd.hpp  numpp.hpp  version.hpp.in
include/numpp/backend/: backend.hpp  blas_vtable.hpp  config.hpp.in  gpu_vtable.hpp  lapack_vtable.hpp
include/numpp/construct/: construct.hpp
include/numpp/core/: creation.hpp  dtype.hpp  error.hpp  half.hpp  limits.hpp  ndarray.hpp  shape.hpp
include/numpp/datetime/: busday.hpp  datetime.hpp
include/numpp/fft/: fft.hpp
include/numpp/grids/: grids.hpp
include/numpp/indexing/: indexing.hpp  indexing_extra.hpp
include/numpp/interop/: dlpack.h  interop.hpp
include/numpp/io/: format.hpp  npy.hpp  npz.hpp  printopts.hpp
include/numpp/lib/: iteration.hpp  leftovers.hpp  memory_overlap.hpp  stride_tricks.hpp  stride_tricks2.hpp
include/numpp/linalg/: array_api.hpp  batched.hpp  linalg.hpp
include/numpp/ma/: masked.hpp  masked_extra.hpp
include/numpp/manip/: manip.hpp  manip_extra.hpp
include/numpp/mathx/: closeto.hpp  mathx.hpp  typecheck.hpp
include/numpp/poly/: poly.hpp  poly1d.hpp
include/numpp/polynomial/: orthopoly.hpp  orthopoly_calc.hpp  poly_classes.hpp  polynomial.hpp
include/numpp/random/: bitgen.hpp  bitgenerators.hpp  distributions.hpp  distributions2.hpp  distributions3.hpp  random.hpp
include/numpp/sorting/: sorting.hpp  sorting_extra.hpp
include/numpp/stats/: integrate.hpp  stats.hpp  stats_extra.hpp
include/numpp/strings/: char.hpp  char_extra.hpp  char_extra2.hpp  string_dtype.hpp  strings.hpp
include/numpp/struct/: struct.hpp
include/numpp/tensor/: tensor.hpp
include/numpp/testing/: testing.hpp
include/numpp/textio/: textio.hpp
include/numpp/umath/: errstate.hpp  ufunc.hpp
openspec/: config.yaml
openspec/changes/add-advanced-indexing/: proposal.md  tasks.md
openspec/changes/add-bitexact-rng/: proposal.md  tasks.md
openspec/changes/add-creation-grids/: tasks.md
openspec/changes/add-dtypes-extended/: proposal.md  tasks.md
openspec/changes/add-einsum/: proposal.md
openspec/changes/add-examples/: proposal.md  tasks.md
openspec/changes/add-fft/: tasks.md
openspec/changes/add-gpu-gemm/: tasks.md
openspec/changes/add-gpu-kernels/: proposal.md
openspec/changes/add-gpu-opencl/: proposal.md
openspec/changes/add-gpu-perf/: tasks.md
openspec/changes/add-interop-misc/: tasks.md
openspec/changes/add-io/: tasks.md
openspec/changes/add-linalg/: tasks.md
openspec/changes/add-polynomial-package/: proposal.md
openspec/changes/add-portable-numpy-gaps/: tasks.md
openspec/changes/add-random/: tasks.md
openspec/changes/add-random-distributions/: proposal.md  tasks.md
openspec/changes/add-sorting/: tasks.md
openspec/changes/add-sorting-extras/: tasks.md
openspec/changes/add-statistics/: tasks.md
openspec/changes/add-ufuncs-elementwise/: proposal.md  tasks.md
openspec/changes/bootstrap-numpp-foundation/: proposal.md  tasks.md
openspec/changes/masked-arrays-extended/: proposal.md  tasks.md
openspec/changes/numpy-foundation-completion/: proposal.md  tasks.md
openspec/changes/tier-b-finish/: tasks.md  (+1 more)
src/: CMakeLists.txt
src/backend/: backend.cpp  blas_backend.cpp  blas_null.cpp  cuda_backend.cu  gpu_null.cpp  lapack_backend.cpp  lapack_null.cpp  opencl_backend.cpp  opencl_min.h  refgpu_backend.cpp  scypp_kernels.hpp
src/construct/: construct.cpp
src/core/: casting.cpp  creation.cpp  dtype.cpp  limits.cpp  ndarray.cpp  shape.cpp
src/datetime/: busday.cpp  datetime.cpp
src/fft/: fft.cpp
src/grids/: grids.cpp
src/indexing/: indexing.cpp  indexing_extra.cpp
src/interop/: interop.cpp
src/io/: format.cpp  npy.cpp  npz.cpp  printopts.cpp
src/lib/: iteration.cpp  memory_overlap.cpp  striding.cpp  striding2.cpp
src/linalg/: array_api.cpp  batched.cpp  linalg.cpp  tensor_solve.cpp
src/ma/: masked.cpp  masked_arith.cpp  masked_hardsoft.cpp  masked_reduce.cpp
src/manip/: manip.cpp  manip_extra.cpp
src/mathx/: closeto.cpp  mathx.cpp  typecheck.cpp
src/poly/: poly.cpp  poly1d.cpp
src/polynomial/: orthopoly.cpp  orthopoly_calc.cpp  poly_classes.cpp  polynomial.cpp
src/random/: bitgenerators.cpp  distributions.cpp  distributions2.cpp  distributions3.cpp  random.cpp  ziggurat_constants.h
src/sorting/: sorting.cpp  sorting_extra.cpp
src/stats/: integrate.cpp  stats.cpp  stats_extra.cpp
src/strings/: char.cpp  char_extra.cpp  char_extra2.cpp  string_dtype.cpp  strings.cpp
src/struct/: struct.cpp
src/tensor/: tensor.cpp
src/testing/: testing.cpp
src/textio/: textio.cpp
src/umath/: errstate.cpp  ufunc.cpp
tests/: CMakeLists.txt  main.cpp  numpp_test.hpp  oracle.hpp  test_array_api.cpp  test_arraysetops_mined.cpp  test_axis_tuple_reductions.cpp  test_backend.cpp  test_batched_linalg.cpp  test_bitgenerators.cpp  test_busday.cpp  test_busday_calendar.cpp  test_casting.cpp  test_char.cpp  test_char_extra.cpp  test_char_extra2.cpp  test_closeto.cpp  test_construct.cpp  test_creation.cpp  test_datetime.cpp  test_device_kernels.cpp  test_distributions.cpp  test_distributions2.cpp  test_distributions3.cpp  test_dlpack.cpp  test_dtype.cpp  test_einsum_ellipsis.cpp  test_einsum_mined.cpp  test_einsum_path.cpp  test_error.cpp  test_errstate.cpp  test_fft.cpp  test_fft2.cpp  test_fft3.cpp  test_function_base_mined.cpp  test_gpu.cpp  test_grids.cpp  test_histograms_mined.cpp  test_index_tricks_mined.cpp  test_indexing.cpp  (+76 more)
tests/packaging/: main.cpp  smoke.sh
tests/packaging/consumer/: CMakeLists.txt
tests/packaging/embed/: CMakeLists.txt
(+169 files in other folders)
