add_executable(numpp_tests
    main.cpp
    test_dtype.cpp
    test_casting.cpp
    test_limits.cpp
    test_manip.cpp
    test_manip_extra.cpp
    test_stats.cpp
    test_stats_extra.cpp
    test_integrate.cpp
    test_grids.cpp
    test_construct.cpp
    test_indexing.cpp
    test_indexing_extra.cpp
    test_mathx.cpp
    test_closeto.cpp
    test_typecheck.cpp
    test_poly.cpp
    test_interp_options.cpp
    test_poly1d.cpp
    test_distributions2.cpp
    test_distributions3.cpp
    test_bitgenerators.cpp
    test_orthopoly.cpp
    test_orthopoly_calc.cpp
    test_poly_classes.cpp
    test_poly_fit.cpp
    test_char_extra.cpp
    test_char_extra2.cpp
    test_printopts.cpp
    test_striding.cpp
    test_striding2.cpp
    test_memory_overlap.cpp
    test_iteration.cpp
    test_tensor.cpp
    test_tensor_solve.cpp
    test_einsum_path.cpp
    test_einsum_ellipsis.cpp
    test_polynomial.cpp
    test_textio.cpp
    test_char.cpp
    test_string_dtype.cpp
    test_distributions.cpp
    test_sorting_extra.cpp
    test_ndarray.cpp
    test_creation.cpp
    test_backend.cpp
    test_error.cpp
    test_errstate.cpp
    test_ufunc.cpp
    test_umath_mined.cpp
    test_umath_mined2.cpp
    test_umath_mined3.cpp
    test_umath_mined4.cpp
    test_multiarray_mined.cpp
    test_multiarray_mined2.cpp
    test_multiarray_mined3.cpp
    test_multiarray_mined4.cpp
    test_nanfunctions_mined.cpp
    test_nanfunctions_mined2.cpp
    test_regression_mined.cpp
    test_index_tricks_mined.cpp
    test_stride_tricks_mined.cpp
    test_type_check_mined.cpp
    test_shape_base_mined.cpp
    test_arraysetops_mined.cpp
    test_histograms_mined.cpp
    test_function_base_mined.cpp
    test_poly_mined.cpp
    test_numeric_mined.cpp
    test_einsum_mined.cpp
    test_ufunc2.cpp
    test_ufunc3.cpp
    test_linalg.cpp
    test_batched_linalg.cpp
    test_linalg_mined.cpp
    test_linalg_mined2.cpp
    test_linalg_mined3.cpp
    test_array_api.cpp
    test_linalg2.cpp
    test_linalg3.cpp
    test_linalg4.cpp
    test_fft.cpp
    test_fft2.cpp
    test_fft3.cpp
    test_random.cpp
    test_rng_bitexact.cpp
    test_random2.cpp
    test_random3.cpp
    test_random4.cpp
    test_io.cpp
    test_io2.cpp
    test_io3.cpp
    test_sorting.cpp
    test_sorting2.cpp
    test_sorting3.cpp
    test_strings.cpp
    test_datetime.cpp
    test_busday.cpp
    test_busday_calendar.cpp
    test_testing.cpp
    test_masked.cpp
    test_dlpack.cpp
    test_memmap.cpp
    test_masked_arith.cpp
    test_masked_reduce.cpp
    test_masked_hardsoft.cpp
    test_struct.cpp
    test_gpu.cpp
    test_nanreduce.cpp
)
target_link_libraries(numpp_tests PRIVATE numpp::numpp)
target_include_directories(numpp_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(numpp_tests PRIVATE
    NUMPP_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/golden")
target_compile_options(numpp_tests PRIVATE -Wall -Wextra)

add_test(NAME numpp_tests COMMAND numpp_tests)
